--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "bootstrap": "^3.3.7",
+    "flux": "^3.1.3",
+    "fontawesome": "^5.6.3",
+    "moment": "^2.24.0",
+    "prop-types": "latest",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.6",
+    "react-date-picker": "^7.5.0",
     "react-dom": "^16.8.6",
+    "react-fontawesome": "^1.6.1",
+    "react-router": "^3.2.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -21,5 +35,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  }
 }
